# detego

./: .travis.yml  CODE_OF_CONDUCT.md  README.md  automation.py  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
src/: .automation.py.swp  automation.py
src/detego/: __init__.py  __main__.py  automation.py  decode.py
tests/: test_automation.py  test_tester.py
