[metadata]
name = detego
version = file: VERSION
packages = find_packages(),
author = Ethan Morchy
author_email = emorchy@gmail.com
url = https://github.com/emorchy/automated-decoder
description = Automate the identification and decoding of various ciphers
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
keywords = ctf, decode, automatic, cipher
python_requires = >=3.5
license = gpl-3.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    colorama==0.4.4
    tqdm==4.56.2

[options.packages.find]
where = src
